# Pynux

./: .gdbinit  .gitignore  .gitmodules  CONTRIBUTING.md  LANGUAGE.md  LICENSE  README.md  STATUS.md  TODO.md  boot_vm.sh  build.sh  compiler  pyproject.toml
compiler/: __init__.py  adder.py  ast_nodes.py  codegen_arm.py  codegen_x86.py  lexer.py  lexer_test.py  optimizer.py  parser.py  pynux.py
coreutils/: banner.py  bc.py  cal.py  cat.py  cut.py  echo.py  factor.py  false.py  fold.py  fortune.py  grep.py  head.py  ls.py  mkdir.py  nl.py  pwd.py  rev.py  rm.py  seq.py  sh.py  sleep.py  sort.py  tac.py  tail.py  touch.py  tr.py  true.py  uname.py  uniq.py  uptime.py  wc.py  yes.py
docs/: 9p.md  API.md  ARCHITECTURE.md  BOOT.md  HAMSH_SPEC.md  HARDWARE.md  L30_DISTRO_MODULE_NOTES.md  REAL_HARDWARE.md  architecture.md  distro-namespaces.md  ext4_multiblock_write_audit.md  hamUI.md  packages.md  rio.md  rootfs_partition.md  security.md  vtnext-v2.md  wifi_known_broken.md  x86-backend.md
etc/: hostname  inittab  install.hamsh  issue  motd  os-release  passwd  rc.boot  shadow
examples/: count.py  fib.py  hello.py  vtnext_demo.py
fs/: cpio.ad  elf.ad  ext4.ad  fat_mkfs.ad  initramfs_blob.S  initramfs_data.S  pipe.ad  procfs.ad  socket_state.ad  socketpair.ad  tmpfs.ad  vfs.ad  vfs.py
init/: main.ad  main.py  p9_smoke.ad
kernel/: __init__.py  boot.py  bootloader.py  debug.py  devfs.py  fault.py  firmware.py  gdb_stub.py  kernel.py  list.ad  modprobe.ad  modules_dep.ad  mpu.py  panic.ad  panic.py  process.py  ramfs.py  sync.py  timer.py
lib/: __init__.py  algo.py  (+35 more)
(+856 files in other folders)
